# live

./: .env.sample  .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  justfile  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: check.yml
docker/: .env  bitcoin.conf  bitcoin.cookie  devbox.nginx.conf  docker-compose.monkey-patch-linux.yml  docker-compose.yml  justfile  leptos.Dockerfile  ord.Dockerfile
docs/: book.toml
src/: .env.sample  app.rs  counters.rs  error_template.rs  errors.rs  fallback.rs  lib.rs  main.rs  ordilive.rs  server_actions.rs  types.rs
src/app/: components.rs  pages.rs
src/app/components/: details.rs  footer.rs  header.rs  icon.rs  inscriptions.rs  layout.rs  livegrid.rs  mod.rs  preview.rs  theme_toggle.rs
src/app/functions/: inscription.rs  locale.rs  mod.rs  theme.rs
src/app/i18n/: context.rs  de.rs  en.rs  hi.rs  mod.rs  types.rs  zh_hans.rs  zh_hant.rs  zn.rs
src/app/providers/: i18n.rs  mod.rs  stream.rs  theme.rs
src/app/routes/: home.rs  inscription.rs  mod.rs
src/backend/: bitcoin_core.rs  mod.rs  space.rs
src/ord/: inscription.rs  media.rs  mod.rs
src/style/: input.css  tailwind.config.js
style/: output.css
test/end2end/: runner.ts
